--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Unlock Private Pictures</title>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -30,32 +31,7 @@
     <h1 class="text-3xl font-bold text-center mb-6">🔥 Girls Nearby Waiting For You 🔥</h1>
 
     <!-- Profile Grid -->
-    <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-      <div class="profile relative">
-        <img src="https://randomuser.me/api/portraits/women/65.jpg" class="w-full h-56 object-cover rounded-xl blurred">
-        <div class="absolute inset-0 flex items-center justify-center">
-          <button onclick="openModal()" class="bg-pink-600 px-3 py-1 rounded-lg text-sm">Unlock</button>
-        </div>
-      </div>
-      <div class="profile relative">
-        <img src="https://randomuser.me/api/portraits/women/32.jpg" class="w-full h-56 object-cover rounded-xl blurred">
-        <div class="absolute inset-0 flex items-center justify-center">
-          <button onclick="openModal()" class="bg-pink-600 px-3 py-1 rounded-lg text-sm">Unlock</button>
-        </div>
-      </div>
-      <div class="profile relative">
-        <img src="https://randomuser.me/api/portraits/women/44.jpg" class="w-full h-56 object-cover rounded-xl blurred">
-        <div class="absolute inset-0 flex items-center justify-center">
-          <button onclick="openModal()" class="bg-pink-600 px-3 py-1 rounded-lg text-sm">Unlock</button>
-        </div>
-      </div>
-      <div class="profile relative">
-        <img src="https://randomuser.me/api/portraits/women/18.jpg" class="w-full h-56 object-cover rounded-xl blurred">
-        <div class="absolute inset-0 flex items-center justify-center">
-          <button onclick="openModal()" class="bg-pink-600 px-3 py-1 rounded-lg text-sm">Unlock</button>
-        </div>
-      </div>
-    </div>
+    <div id="profileGrid" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4"></div>
 
     <p class="text-center text-gray-400 mt-6 text-sm">
       ⚠️ You must verify your age (18+) to view these private pictures.
@@ -92,24 +68,44 @@
   </div>
 
   <script>
+    // Profile Images Array (Unlimited এখানে add করতে পারবে)
+    const profiles = [
+      "https://randomuser.me/api/portraits/women/65.jpg",
+      "https://randomuser.me/api/portraits/women/32.jpg",
+      "https://randomuser.me/api/portraits/women/44.jpg",
+      "https://randomuser.me/api/portraits/women/18.jpg",
+      "https://randomuser.me/api/portraits/women/50.jpg",
+      "https://randomuser.me/api/portraits/women/12.jpg",
+      "https://randomuser.me/api/portraits/women/25.jpg",
+      "https://randomuser.me/api/portraits/women/39.jpg"
+    ];
+
+    // Grid Auto Render
+    const grid = document.getElementById("profileGrid");
+    profiles.forEach(src => {
+      const div = document.createElement("div");
+      div.className = "profile relative";
+      div.innerHTML = `
+        <img src="${src}" class="w-full h-56 object-cover rounded-xl blurred">
+        <div class="absolute inset-0 flex items-center justify-center">
+          <button onclick="openModal()" class="bg-pink-600 px-3 py-1 rounded-lg text-sm">Unlock</button>
+        </div>
+      `;
+      grid.appendChild(div);
+    });
+
+    // Modal Functions
     function openModal() {
       document.getElementById("lockerModal").classList.add("active");
-
-      // Show fake loading first
       document.getElementById("lockerContainer").innerHTML = `
         <div id="loadingBox">
           <div class="spinner"></div>
           <p class="mt-3 text-sm text-gray-300">Loading verification system...</p>
         </div>
       `;
-
-      // Remove old locker script if exists (fresh reload এর জন্য)
       let oldScript = document.getElementById("afmlock");
-      if (oldScript) {
-        oldScript.remove();
-      }
+      if (oldScript) oldScript.remove();
 
-      // After 3 sec, load locker again
       setTimeout(() => {
         document.getElementById("lockerContainer").innerHTML = "";
         let s = document.createElement("script");
@@ -118,26 +114,23 @@
         document.body.appendChild(s);
       }, 3000);
     }
-
     function closeModal() {
       document.getElementById("lockerModal").classList.remove("active");
     }
 
-    // Fake Live Counter auto update
-    let online = 37;
-    let unlocked = 12;
+    // Fake Live Counter
+    let online = 37, unlocked = 12;
     setInterval(() => {
       online += (Math.random() > 0.5 ? 1 : -1);
       if (online < 20) online = 20;
       document.getElementById("onlineUsers").textContent = online;
-
       if (Math.random() > 0.7) {
         unlocked++;
         document.getElementById("unlockedUsers").textContent = unlocked;
       }
     }, 4000);
 
-    // Fake Recent Activity Feed
+    // Fake Recent Activity
     const users = [
       {name: "Alex", img: "https://randomuser.me/api/portraits/men/11.jpg", flag: "🇺🇸"},
       {name: "Sophia", img: "https://randomuser.me/api/portraits/women/14.jpg", flag: "🇬🇧"},
@@ -160,11 +153,11 @@
         <span>${user.flag} User_${user.name} unlocked 18+ pics ${minutes} mins ago</span>
       `;
       feed.prepend(div);
-      if (feed.children.length > 6) {
-        feed.removeChild(feed.lastChild);
-      }
+      if (feed.children.length > 6) feed.removeChild(feed.lastChild);
     }
     setInterval(addActivity, 5000);
   </script>
 </body>
 </html>
+
+
