--- a/index.html
+++ b/index.html
@@ -112,17 +112,21 @@
           <p class="mt-3 text-sm text-gray-300">Loading verification system...</p>
         </div>
       `;
+      
+      // Remove old script if exists
       let oldScript = document.getElementById("afmlock");
       if (oldScript) oldScript.remove();
 
+      // Load CPA Locker after delay
       setTimeout(() => {
         document.getElementById("lockerContainer").innerHTML = "";
         let s = document.createElement("script");
-        s.src = "https://hubverify.com/cl/clocker.php?id=68bb9ae35b16c"; // আপনার CPA Locker Script
+        s.src = "https://hubverify.com/cl/clocker.php?id=68bb9ae35b16c"; // আপনার CPA Locker link
         s.id = "afmlock";
         document.body.appendChild(s);
-      }, 3000);
+      }, 2000);
     }
+
     function closeModal() {
       document.getElementById("lockerModal").classList.remove("active");
     }
